--- a/css/home.css
+++ b/css/home.css
@@ -1,6 +1,12 @@
 * {
   font-size: 14px;
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+a {
+  text-decoration: none;
 }
 
 p {
@@ -27,70 +33,88 @@ p {
   font-size: 12px;
 }
 
-.row:not(.self-banner),
-.logo {
+.home .row:not(.full),
+.home .logo {
   padding: 0 16px;
 }
 
-.row + .row {
+.home .row + .row {
   margin-top: 56px;
 }
 
-.row-title {
+.home .row-title {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.row-title > :first-child {
+.home .row-title *:first-child {
   font-weight: 600;
   font-size: 16px;
 }
 
-.row-title + .row-contents {
+.home .row-title + .row-contents {
   margin-top: 8px;
+}
+
+.home a.row-contents {
+  display: block;
+}
+
+.home .banner-image {
+  width: 100%;
+  height: 100%;
 }
 
 .home {
   position: relative;
 }
 
-.logo {
-  color: #18a0fb;
+.home .logo {
+  display: flex;
+  align-items: center;
   margin-bottom: 24px;
+}
+
+.home .logo span {
+  margin-left: 4px;
+  color: #18a0fb;
   font-size: 16px;
   font-weight: 700;
 }
 
-.pen-icon {
+.home .pen-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   width: 24px;
   height: 24px;
   border-radius: 50%;
   background-color: #f1f1f1;
-
-  display: flex;
-  align-items: center;
-  justify-content: center;
 }
 
-.fa-pen {
-  font-size: 10px;
-}
-
-.more-button {
+.home .more-button {
   color: #989898;
   font-size: 12px;
 }
 
-.my-car {
-  height: 100%;
-  border-radius: 16px;
-  overflow: hidden;
-
+.home .my-car {
   position: relative;
 }
 
-.car-number-wrapper {
+.home .my-car-image {
+  height: 185px;
+  background-color: #f2f2f2;
+  border-radius: 16px;
+}
+
+.home .my-car-image img {
+  width: 100%;
+  height: 100%;
+}
+
+.home .car-number-wrapper {
   position: absolute;
   bottom: 0;
   left: 50%;
@@ -99,7 +123,7 @@ p {
   border-radius: 4px;
 }
 
-.car-number {
+.home .car-number {
   padding: 10px;
   margin: 2px;
   border: 2px solid #222222;
@@ -107,36 +131,17 @@ p {
   text-align: center;
 }
 
-.my-car ul {
-  width: calc(100% * 3);
-  display: flex;
-  transition: 1s;
-  padding: 0;
-  margin: 0;
-}
-
-.my-car li {
-  list-style: none;
-  width: calc(100% / 3);
-  height: 185px;
-  position: relative;
-  margin-bottom: 20px;
-  border-radius: 16px;
-}
-
-.my-car input {
-  display: none;
-}
-
-.my-car .bullet {
+.home .my-car .bullet {
   position: absolute;
   top: 13px;
   right: 13px;
-  text-align: center;
   z-index: 10;
+
+  text-align: center;
+  line-height: 0;
 }
 
-.my-car .bullet label {
+.home .my-car .bullet label {
   width: 4px;
   height: 4px;
   border-radius: 10px;
@@ -147,194 +152,200 @@ p {
   cursor: pointer;
 }
 
-/* 슬라이드 조작 */
-#pos1:checked ~ ul {
-  margin-left: 0;
-}
-#pos2:checked ~ ul {
-  margin-left: -100%;
-}
-#pos3:checked ~ ul {
-  margin-left: -200%;
-}
-/* bullet 조작 */
-#pos1:checked ~ .bullet label:nth-child(1),
-#pos2:checked ~ .bullet label:nth-child(2),
-#pos3:checked ~ .bullet label:nth-child(3) {
-  background: #38b4e8;
+.home .my-car .bullet label.active {
   width: 12px;
+  background-color: #38b4e8;
 }
 
-.my-car li:nth-child(1) {
-  background: #ffa;
-}
-.my-car li:nth-child(2) {
-  background: #faa;
-}
-.my-car li:nth-child(3) {
-  background: #afa;
-}
-
-.my-reservation {
+.home .my-reservation {
   display: flex;
   align-items: center;
+
   height: 80px;
   border-radius: 8px;
   box-shadow: 0 2px 4px 0 rgba(34, 34, 34, 0.08);
 }
 
-.my-reservation > img {
+.home .my-reservation > img {
   width: 80px;
   height: 80px;
   background-color: #989898;
   border-radius: 8px 0 0 8px;
 }
 
-.my-reservation-info {
+.home .my-reservation-info {
   margin-left: 24px;
 }
 
-.my-reservation-info > p {
+.home .my-reservation-info > p {
   font-size: 12px;
 }
 
-.my-reservation-info > p:nth-child(2) {
+.home .my-reservation-info p:nth-child(2) {
   font-size: 14px;
   margin: 4px 0 8px;
 }
 
-.my-consulting {
+.home .my-consulting {
   width: 100%;
   height: 95px;
+  padding: 16px;
+
   background-color: #1a2a41;
   border-radius: 8px;
   color: #fff;
-  padding: 16px;
 }
 
-.my-consulting-title {
+.home .my-consulting-title {
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
 
-.my-consulting-text {
+.home .my-consulting-text {
   margin-top: 8px;
   line-height: 21px;
+  color: #e1e1e1;
+
+  overflow: hidden;
+  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
 }
 
-.slider {
+.home .slider {
   overflow: auto;
 }
 
-.slider-item-wrapper {
+.home .slider-item-wrapper {
   display: flex;
   align-items: center;
 }
 
-.slider-item {
+.home .slider-item {
   width: 120px;
 }
 
-.slider-item + .slider-item {
+.home .slider-item + .slider-item {
   margin-left: 16px;
 }
 
-.slider-item > p {
+.home .slider-item > p {
   margin-top: 4px;
 }
 
-.slider-item-img {
+.home .slider-item-img {
   width: 120px;
   height: 120px;
+  margin-bottom: 5px;
+
   border: 1px solid #f6f6f6;
   border-radius: 8px;
-  background-color: #fff;
 }
 
-.sliter-item-des {
+.home .sliter-item-des {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
 }
 
-.report-banner {
+.home .banner1 {
   height: 120px;
   border-radius: 8px;
-  background-color: #989898;
 }
 
-.consulting-banner {
+.home .banner2 {
   height: 90px;
   border-radius: 8px;
-  background-color: #989898;
 }
 
-.self-banner > .row-title {
+.home .row.full > .row-title {
   padding: 0 16px;
 }
 
-.self-banner > .row-contents {
+.home .banner3 {
   height: 155px;
-  background-color: #989898;
 }
 
-.footer {
-  background-color: #f6f6f6;
+.home .footer {
+  margin-top: 56px;
   padding: 32px 16px 19px;
+  background-color: #f6f6f6;
+  color: #7a7a7a;
 }
 
-.footer > div + div {
+.home .footer > div + div {
   margin-top: 8px;
 }
 
-.footer > div,
-.footer > ul > li {
+.home .footer div,
+.home .footer ul li {
   font-size: 10px;
 }
 
-.company-name {
+.home .company-name {
   font-size: 11px;
   font-weight: 600;
 }
 
-.footer > ul {
+.home .footer > ul {
   padding-inline-start: 6px;
   list-style-type: "-";
 }
 
-.menu {
+.home .menu {
   display: flex;
   align-items: center;
   justify-content: center;
+
+  border-top: 1px solid #f3f3f3;
 }
 
-.menu-item {
+.home .menu-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
   width: 72px;
   height: 55px;
+  margin-top: 4px;
+
   text-align: center;
   font-size: 12px;
-  margin-top: 4px;
   color: #d7dde4;
-  padding: 14px 8px;
 }
 
-.menu-item-text {
-  font-size: 12px;
+.home .menu-item-text {
   margin-top: 4px;
+  font-size: 12px;
 }
 
-.menu-item.active {
+.home .menu-item svg {
+  fill: #d7dde4;
+}
+
+.home .menu-item.active {
   color: #18a0fb;
 }
 
-.setting-button {
+.home .menu-item.active svg {
+  fill: #18a0fb;
+}
+
+.home .setting-button {
   position: absolute;
   bottom: 72px;
   right: 16px;
 
   width: 56px;
   height: 56px;
-  background-color: #0136c4;
   border-radius: 50%;
+  overflow: hidden;
+}
+
+.home .setting-button img {
+  width: 100%;
+  height: 100%;
 }
